--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-scripts": "5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.77.6",
+    "sweetalert2": "^11.12.3",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
