--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "formik": "^2.4.6",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -25,7 +26,8 @@
     "sass": "^1.77.6",
     "sweetalert2": "^11.12.3",
     "uuid": "^10.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
