--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
