--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-medium-image-zoom": "^5.2.7",
+    "react-photoswipe-gallery": "^3.0.2",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
