--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
     "react-photoswipe-gallery": "^3.0.2",
     "react-query": "^3.39.3",
